...
        <variable
            name="viewModel"
            type="com.riningan.mvvmsample.presentation.details.DetailsViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/llDetails"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:navigationIcon="@drawable/ic_back"
                app:navigationContentDescription="@string/item_back"
                app:onNavigationClick="@{viewModel.backClickListener}"
                app:title='@{viewModel.pokemon == null ? "" : viewModel.pokemon.name}' />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
...
